# alphabot2-pi-zero

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/App-Control/: main.py
examples/Bluetooth-Control/: bluetooth.py
examples/Web-Control/: PCA9685.py  index.html
examples/python/: IRremote.py  Infrared_Obstacle_Avoidance.py  Joystick.py  Line_Follow.py  PCA9685.py  TRSensors.py  Ultrasonic_Obstacle_Avoidance.py  Ultrasonic_Ranging.py  mqtt.py
frontend/alphabot/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
frontend/alphabot/src/: index.html  styles.scss
frontend/alphabot/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts
frontend/alphabot/src/app/joystick/: joystick.component.html  joystick.component.scss  joystick.component.ts
frontend/alphabot/src/app/messaging-client/: messaging-client.spec.ts  messaging-client.ts  topic-matcher.spec.ts  topic-matcher.ts  (+1 more)
frontend/alphabot/src/environments/: environment.prod.ts  environment.ts
root/actor/: motor.py  servos.py
root/sensor/ir/: ir2mqtt.py  irdecoder.py
root/sensor/ultrasonic/: ultrasonic.py
setup/: mjpeg-streamer.service  mosquitto.conf  nginx.conf  servo0.py
www/: 3rdpartylicenses.txt  index.html  main.280161a73bd6f8aa.js  main.30b78c55e2e8012e.js  main.47db3a67fb115611.js  main.834ed31794898b8e.js  main.8b674a7e7bf6a7b0.js  main.a27240e228a492b5.js  main.ed0b35e840e351d3.js  polyfills.39d979cf3a8fccb6.js  runtime.c4cbd170a9067cd0.js  styles.4d4679eeaa46788d.css  styles.8c3dc02092c32bae.css
(+14 files in other folders)
