[tool.poetry]
name = "alphabot2-pi-zero"
version = "0.1.0"
description = "mtrail alphabot2 pi zero project"
authors = ["Kay Fricke <kf@mtrail.ch>", "Luc Baumann <lb@mtrail.ch>", "Marc Hoffmann <mh@mtrail.ch>"]

[tool.poetry.dependencies]
python = ">3.9"
"RPi.GPIO" = "^0.7.1"
spidev = "^3.5"
rpi-ws281x = "^4.3.2"
paho-mqtt = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-black = "^0.3.12"
pytest-cov = "^3.0.0"
black = "^22.1.0"
pytest-mock = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
